@@ -13,6 +13,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.SimpleCommandMap;
 import org.bukkit.entity.Player;
 import org.jetbrains.annotations.NotNull;
+import org.jspecify.annotations.NonNull;
 
 import java.lang.reflect.Field;
 import java.util.Arrays;
@@ -35,7 +36,7 @@ public class RegistrableMenuCommand extends Command {
 
     public RegistrableMenuCommand(final @NotNull DeluxeMenus plugin,
                                   final @NotNull Menu menu) {
-        super(menu.options().commands().isEmpty() ? menu.options().name() : menu.options().commands().get(0));
+        super(menu.options().commands().isEmpty() ? menu.options().name() : menu.options().commands().getFirst());
         this.plugin = plugin;
         this.scheduler = plugin.getScheduler();
         this.menu = menu;
@@ -46,12 +47,12 @@ public class RegistrableMenuCommand extends Command {
     }
 
     @Override
-    public boolean execute(final @NotNull CommandSender sender, final @NotNull String commandLabel, final @NotNull String[] typedArgs) {
+    public boolean execute(final @NotNull CommandSender sender, final @NotNull String commandLabel, final @NotNull String @NonNull [] typedArgs) {
         if (this.unregistered) {
             throw new IllegalStateException("This command was unregistered!");
         }
 
-        if (!(sender instanceof Player)) {
+        if (!(sender instanceof Player player)) {
             Msg.msg(sender, "Menus can only be opened by players!");
             return true;
         }
@@ -63,7 +64,7 @@ public class RegistrableMenuCommand extends Command {
             if (typedArgs.length < menu.options().arguments().size()) {
                 if (menu.options().argumentsUsageMessage().isPresent()) {
                     String usageMessage = menu.options().argumentsUsageMessage().get();
-                    Msg.msg(sender, StringUtils.replacePlaceholders(usageMessage, (Player) sender));
+                    Msg.msg(sender, StringUtils.replacePlaceholders(usageMessage, player));
                 }
                 return true;
             }
@@ -82,7 +83,6 @@ public class RegistrableMenuCommand extends Command {
             }
         }
 
-        Player player = (Player) sender;
         plugin.debug(DebugLevel.LOWEST, Level.INFO, "opening menu: " + menu.options().name());
         menu.openMenu(player, argMap, null);
         return true;
@@ -145,6 +145,7 @@ public class RegistrableMenuCommand extends Command {
             knownCommands = SimpleCommandMap.class.getDeclaredField("knownCommands");
             knownCommands.setAccessible(true);
 
+            //noinspection unchecked
             final Map<String, Command> knownCommandsMap = (Map<String, Command>) knownCommands.get(cMap.get(Bukkit.getServer()));
 
             // We need to remove every single alias because CommandMap#register() adds them all to the map.
